code25_all/scala/11390776.txt
scala> trait T
defined trait T

scala> object A extends T
defined module A

T
scala> val t: T = A
t: T = A$@98b13b

new
apply
apply
apply
A
scala> val a: A = A
<console>:9: error: not found: type A
       val a: A = A
              ^

